vbnc/vbnc/vbnc/tests/Errors/32007-4.vb
Class T
    Const M_Char_Char As Char = 1UI
End Class